# bag_read_service

./: .gitignore  CMakeLists.txt  package.xml  readme.md
launch/: bag_read_service.launch  keypoint_transform.launch  openpose_sole.launch  publish_tf.launch  test.launch  whole_pipeline_xtion.launch  whole_pipeline_xtion_with_marker.launch
plot/: plot_distribution.py  plot_keypoints.py  readme.md
plot/env/: pip-selfcheck.json
src/: checkFrames.py  clientBag.py  count.py  listenBag.py  plot_keypoints.py  readBag.py  readBagService.py  readme.html  recordPointCloudStamps.py  transform_keypoints_3d_matching.py
