<?xml version="1.0"?>
<package format="2">
  <name>bag_read_service</name>
  <version>0.0.1</version>
  <description>Collection of launch files, for the openpose_utils repository</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>keypoint_3d_matching_msgs</build_depend>


  <exec_depend>openpose_ros</exec_depend>
  <exec_depend>manos_vision</exec_depend>
  <exec_depend>ar_track_alvar</exec_depend>
  <exec_depend>keypoint_3d_matching</exec_depend>
  <exec_depend>tf_based_on_ar_marker</exec_depend>

  <exec_depend>keypoint_3d_matching_msgs</exec_depend>

  <!-- fotis -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
